# github-commit-test

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml
github_commit_test/: consume.py  main.py
